--- a/Vazio roxo/VAZIOROXO.html
+++ b/Vazio roxo/VAZIOROXO.html
@@ -9,7 +9,11 @@
 <body <mark style="background-color:purple";> </mark>
 <button style="background-color:palevioletred;" onclick="window.location.href= 'https://youtu.be/lmQKBde9qRA?si=lg3b_l4QNlVUOQoY&t=42'"> Vazio Roxo... </button>  </mark>
 <h1> <mark style="background-color:palevioletred">  <big>Vazio roxo...</big></mark></h1> 
-<img src="C:\Users\alunolab08\Desktop\Vazio roxo\imagens\vazio roxo.png" width="1350" height="500">
+<img src="imagens\vazio roxo.png" id="roxo" width="1350" height="500">
+<br/>
+<input type="button" value="press" onclick="document.getElementById ('roxo').style.display = 'none';  "/>
+<input type="button" value="press2" onclick="document.getElementById ('roxo').style.display = 'block';  "/>
+
 
 </body>
 </html>
