--- a/Aulas Fabrício CC1N/aula 7.html
+++ b/Aulas Fabrício CC1N/aula 7.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Listado</title>
 </head>
 <link rel="shortcut icon" href="imagens\favorito.png" type="image/x-icon">
 <body>
@@ -45,14 +45,35 @@ Também utilizado para fazer menus-->
 <!--Quando preciso fazer um dicionário, lista com sigla e 
 descrição <dl>(Definition Term) e o <dd> (Descrition)-->
 <dl>HTML</dl>
-<dd>Linguagem de marcação para criação do conteudo de um site</dd>
+    <dd>Linguagem de marcação para criação do conteudo de um site</dd>
 <dl>CSS</dl>
-<dd>Linguagem de marcação para criação do design de um site</dd>
+    <dd>Linguagem de marcação para criação do design de um site</dd>
 <dl>Javascript</dl>
-<dd>Linguagem de programação para a
+    <dd>Linguagem de programação para a
 criação interativa de um site</dd>
 <h2>Desafio lista do blog</h2>
-
+    <dl>1.Antigas</dl>
+        <ol type="a">
+            <li>Clipper</li>
+            <li>Visual Basic</li>
+            <li>Power Builder</li>
+            <li>Delphi</li>
+        </ol>
+    <dl>2.Novas</dl>
+        <ol type="a" start="5" >
+            <li>C#</li>
+            <li>Python</li>
+            <li>Java</li>
+            <li>JavaScript</li>
+        </ol>
+<h4>Meus Jogos Favoritos</h4>
+    <dl>1.NES</dl>
+        <ul type="circle">
+            <li>Mario Kart 8 Deluxe (Nintendo Switch)</li>
+        </ul>
+        <dd></dd><ul type="square">
+            <li>Terminar em casa</li>
+        </ul>
 
 </body>
 </html>
