--- a/Aulas Fabrício CC1N/Aula 8/aula 8.html
+++ b/Aulas Fabrício CC1N/Aula 8/aula 8.html
@@ -14,15 +14,23 @@
         <p>Exemplo:</p>
         <p>Criando link Externo para acessar um site da <a href="https://uvv.br/"> UVV</a></p>
     <h2>Link externo com outras propriedades</h2>
-    <p>Aqui vou criar um link externo para não sobrepor meu site. O link <a href="https://uvv.br/" target="_blank" rel="external">UVV</a> 
-    aqui abre nova aba</p>
+        <p>Aqui vou criar um link externo para não sobrepor meu site. O link <a href="https://uvv.br/" target="_blank" rel="external">UVV</a> 
+        aqui abre nova aba</p>
     <h1>Link interno (Voltar)</h1>
     <!--Link para página no mesmo nível de diretório-->
         <p>Exemplo</p>
-        <p>Criando link interno para acessar a <a href="aula8pag2.html" target="_self" rel="next">segunda pagina</a> </p>
+        <p>Criando link interno para acessar a <a href="aula8pag2.html" target="_self" rel="next">Segunda pagina</a> </p>
     <h1>Link interno (Ir)</h1>
     <!--Link para página em níveis de diretório diferentes-->
-    <p>Criando link interno para acessar a <a href="./aula8pag3.html" target="_self" rel="next">Terceira Página</a></p>
+        <p>Criando link interno para acessar a <a href="./aula8pag3.html" target="_self" rel="next">Terceira Página</a></p>
+        <p>Esse <a href="./Arquivos/CSW - Aula 8 - Primeiros passos com HTML e CSS - Links.pdf" target="_blank">Link(aula dnv)</a>, você poderá fazer o download de um arquivo pdf,
+        porém se o browser conheser o arquivo, ele simplesmente abrirá o arquivo diretamente</p>
+        <p>já nesse <a href="./Arquivos/CSW - Aula 8 - Primeiros passos com HTML e CSS - Links.pdf" download="file-name" type="application/pdf"> Link2</a>,você poderá fazer o download
+        de um arquivo pdf, porém será perguntado onde você deseja salvar o arquivo <strong> obs=(perguntar fabrício por que não foi)</strong> </p>
+    <br>
+    <h1>Desafio de montagem de página:</h1>
+    <a href="/Aula 8/aula8pag4.html" target="_blank" rel="external" >Página Principal</a>
+
 
 
 </body>
