--- a/Aulas Fabrício CC1N/Aula 8/aula8pag3.html
+++ b/Aulas Fabrício CC1N/Aula 8/aula8pag3.html
@@ -6,8 +6,11 @@
     <title>Amogus</title>
 </head>
 <body>
-<h1>Amogus lore</h1>
-<img src="imagens\amogus.webp" width="400" height="300">
+<h1><a href="/Aula 8/aula8pag4.html" target="_self" rel="prev">Voltar</a></h1>
+<a href="https://www.youtube.com/watch?v=5DlROhT8NgU" target="_blank rel="external" > <img src="imagens\amogus.webp" width="400" height="300" id="amogus"></a>
+<br>
+<input type="button" value="No sus" onclick="document.getElementById ('amogus').style.display= 'none'">
+<input type="button" value="Yes sus" onclick="document.getElementById ('amogus').style.display= 'block'">
 
 </body>
 </html>
