--- a/Aulas Fabrício CC1N/Aula 8/aula 8.html
+++ b/Aulas Fabrício CC1N/Aula 8/aula 8.html
@@ -29,7 +29,7 @@
         de um arquivo pdf, porém será perguntado onde você deseja salvar o arquivo <strong> obs=(perguntar fabrício por que não foi)</strong> </p>
     <br>
     <h1>Desafio de montagem de página:</h1>
-    <a href="/Aula 8/aula8pag4.html" target="_blank" rel="external" >Página Principal</a>
+    <a href="aula8pag4.html" target="_blank" rel="external" >Página Principal</a>
 
 
 
