--- a/Aulas Fabrício CC1N/Aula 8/aula8pag2.html
+++ b/Aulas Fabrício CC1N/Aula 8/aula8pag2.html
@@ -6,8 +6,12 @@
     <title>Kira yoshikage monologue</title>
 </head>
 <body style="background-color: violet;">
-<a href="aula 8.html" target="_self" rel="prev"> Voltar</a>
-<p><img src="imagens\kira.jpg" width="400" height="300"></p>
+<h2><a href="aula 8.html" target="_self" rel="prev"> Voltar</a></h2>
+<p>
+    <picture>
+    <img src="imagens\kira.jpg" width="400" height="300" alt="imagem de um personagem de jojo loiro falando seu monólogo extremamente longo em japonês">
+    </picture>
+</p>
 <h3>Watashi no na wa “kirayoshikage”</h3>
 <p>nenrei 33-sai jitaku wa moriōchō hokutō-bu no bessō chitai ni ari… kekkon wa shite</p>
 <p>inai… shigoto wa “kameyūchēn-ten” no kaishain de mainichi osokutomo yoru 8-ji made ni wa kitaku suru tabako wa</p>
