--- a/Aulas Fabrício CC1N/Aula 8/aula8pag4.html
+++ b/Aulas Fabrício CC1N/Aula 8/aula8pag4.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="Imagens/desafio.png" type="image/x-icon" >
 </head>
 <body>
-<h2> <a href="/Aula 8/aula 8.html" target="self" rel="prev">Voltar</a></h2>
-<h1><a href="/Aula 8/aula8pag5.html" target="_self" rel="next">Página sobre a região</a></h1>
+<h2> <a href="aula 8.html" target="self" rel="prev">Voltar</a></h2>
+<h1><a href="aula8pag5.html" target="_self" rel="next">Página sobre a região</a></h1>
 
 <strong><big><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima deleniti similique sed, consequatur iusto aliquam at,</p>
 <p>illum itaque aliquid odit corporis. Adipisci saepe consequuntur repellat dolores sit nostrum dolorum aut!</p></big></strong>
