--- a/Vazio roxo/VAZIOROXO.html
+++ b/Vazio roxo/VAZIOROXO.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donut time</title>
 </head>
-<body <mark style="background-color:purple";> </mark>
-<button style="background-color:palevioletred;" onclick="window.location.href= 'https://youtu.be/lmQKBde9qRA?si=lg3b_l4QNlVUOQoY&t=42'"> Vazio Roxo... </button>  </mark>
+<body style="background-color:purple";>
 <h1> <mark style="background-color:palevioletred">  <big>Vazio roxo...</big></mark></h1> 
-<img src="imagens\vazio roxo.png" id="roxo" width="1350" height="500">
+<a href="https://youtu.be/lmQKBde9qRA?si=lg3b_l4QNlVUOQoY&t=42" target="_blank" rel="external"> <img  src="imagens\vazio roxo.png" id="roxo" width="1350" height="500"></a>
 <br/>
-<input type="button" value="press" onclick="document.getElementById ('roxo').style.display = 'none';  "/>
-<input type="button" value="press2" onclick="document.getElementById ('roxo').style.display = 'block';  "/>
+<input style="background-color: palevioletred;" type="button" value="sem roxo :( " onclick="document.getElementById ('roxo').style.display = 'none';  "/>
+<input style="background-color: palevioletred;" type="button" value="com roxo :)" onclick="document.getElementById ('roxo').style.display = 'block';  "/>
 
 
 </body>
