--- a/Aulas Fabrício CC1N/Aula 8/aula8pag3.html
+++ b/Aulas Fabrício CC1N/Aula 8/aula8pag3.html
@@ -6,7 +6,7 @@
     <title>Amogus</title>
 </head>
 <body>
-<h1><a href="/Aula 8/aula8pag4.html" target="_self" rel="prev">Voltar</a></h1>
+<h2><a href="aula 8.html" target="_self" rel="prev">Voltar</a></h2>
 <a href="https://www.youtube.com/watch?v=5DlROhT8NgU" target="_blank rel="external" > <img src="imagens\amogus.webp" width="400" height="300" id="amogus"></a>
 <br>
 <input type="button" value="No sus" onclick="document.getElementById ('amogus').style.display= 'none'">
