--- a/Aulas Fabrício CC1N/Aula 8/aula8pag5.html
+++ b/Aulas Fabrício CC1N/Aula 8/aula8pag5.html
@@ -7,11 +7,11 @@
     <link rel="shortcut icon" href="Imagens\desafio.png" type="image/x-icon" > 
 </head>
 <body>
-<h2><a href="/Aula 8/aula 8.html" target="_self" rel="prev">Voltar</a></h2>
+<h2><a href="aula 8.html" target="_self" rel="prev">Voltar</a></h2>
 <h1>Desafio de Links ancorados</h1>
-<a href="/Aula 8/Arquivos/Vila_Velha.pdf" download="Vila_Velha" type="application/pdf" >Vila Velha.pdf</a>
+<a href="Arquivos/Vila_Velha.pdf" download="Vila_Velha" type="application/pdf" >Vila Velha.pdf</a>
 <br>
-<a href="/Aula 8/Arquivos/Região_Metropolitana_da_Grande_Vitória.pdf" download="Vitória" type="application/pdf" >Vitória.pdf</a>
+<a href="Arquivos/Região_Metropolitana_da_Grande_Vitória.pdf" download="Vitória" type="application/pdf" >Vitória.pdf</a>
 <dl>Grande Vitória</dl>
 <dd> <a href="https://pt.wikipedia.org/wiki/Região_Metropolitana_da_Grande_Vitória" target="_blank" rel="external">Vitória</a></dd>
 <dd> <a href="https://pt.wikipedia.org/wiki/Vila_Velha" target="_blank" rel="external">Serra</a></dd>
