--- a/Aula 12/aula 12.html
+++ b/Aula 12/aula 12.html
@@ -46,6 +46,9 @@ Gradiente Mão na massa
 <br>
 <h2>
 Capítulo 2
+Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti vero odio doloribus facere totam, facilis dolore,
+ reprehenderit ratione provident eveniet et itaque praesentium tenetur ducimus eligendi omnis.
+  Sunt, velit ratione.
 </h2>
 </main>
 </body>
