--- a/Navegador de aulas.html
+++ b/Navegador de aulas.html
@@ -8,7 +8,8 @@
 <body>
 <h1>Olá! esse aqui é um navegador criado com o objetivo de passar entre todas as aulas</h1>
 <p>Começamos na aula 3 portanto começará na aula 3</p>
-<button onclick="window.location.href='https://github.com/frferreira/2024-1-cc1n'"><h4>github do fabrício</h4></button>
+<button onclick="window.location.href='https://github.com/frferreira/2024-1-cc1n'"><h4>Github do Fabrício</h4></button>
+<button onclick="window.location.href='https://github.com/quioquiopg/Aulas-Fabr-cio-CSW-.git'"><h4>Meu Github</h4></button>
 <dl>Aulas CC1N</dl>
 <h3><dd> <a href="Aula 3/aula 3.html" target="_self" rel="next">Aula 3</a></dd></h3>
 <h3><dd> <a href="Aula 4/aula 4.html" target="_self" rel="next">Aula 4</a></dd></h3>
@@ -22,8 +23,10 @@
 <h3><dd> <a href="Aula 8/aula8pag5.html" target="_self" rel="next">Aula 8 pag5</a></dd></h3>
 <h3><dd> <a href="Aula 8/Spoiller Javascript.html" target="_self" rel="next">Aula 8 spoiler javascript</a></dd></h3>
 <h3><dd> <a href="Aula 9/aula 9.html" target="_self" rel="next">Aula 9</a></dd></h3>
-<h3><dd> <a href="Aula 10/aula 10.html" target="_self" rel="next">Aula 10</a></dd></h3></h3>
-
+<h3><dd> <a href="Aula 10/aula 10.html" target="_self" rel="next">Aula 10</a></dd></h3>
+<h3><dd> <a href="Aula 11/aula 11.html" target="_self" rel="next">Aula 11</a></dd></h3>
+<h3><dd> <a href="Aula 11/aula 11 part2.html" target="_self" rel="next">Aula 11 parte 2</a></dd></h3>
+<h3><dd> <a href="Aula 12/aula 12.html" target="_self" rel="next">Aula 12</a></dd></h3>
 
 </body>
 </html>
