--- a/Aula 11/aula 11 part2.html
+++ b/Aula 11/aula 11 part2.html
@@ -29,7 +29,7 @@ p {
 <h1>Capítulo 3</h1>
 <p>Explore um vasto mundo aberto que consiste de 5 ecosistemas únicos.
      Tudo que você faz gera um impacto no mundo, já que em Albion a economia é produzida pelo jogador.</p>
-<a href="segredo.html">segredo</a>
+<a href="aula 11.html" target="_self" rel="internal">voltar</a>
 <p></p>
 </body>
 </html>
