--- a/Aula 5/aula 5.html
+++ b/Aula 5/aula 5.html
@@ -7,27 +7,27 @@
 </head>
 <body>
 <p>
-    &#10142; 🌑🚲👉🏼👈🏼👽 1 &#10089; E.T - O Extraterrestre
+    &#10142;&#128690;&#128073;&#128072;&#128125; 1 &#10089; E.T - O Extraterrestre
     <div><img src="imagens\et.png"  width=250 height=220 ></div>
 </p> 
 
 <br><p>
- &#10142; 👴🏼💍💍💍 2 &#10089; O senhor dos anéis
+ &#10142; &#128116;&#128141;&#128141;&#128141; 2 &#10089; O senhor dos anéis
 <div><img src="imagens\Senhor do aneis.png" width="250" height="220" ></div>
 </p>
 
 <br><p>
-     &#10142; 🌍🐵🐒🙈🙉🙊 3 &#10089; Planeta dos masqueicos
+     &#10142; &#127759;&#128018;&#x1F648;&#128585; 3 &#10089; Planeta dos masqueicos
 <div><img src="imagens\mamaco.png" width="250" height="220" ></div>
 </p>
 
 <br><p>
-     &#10142; 👿👠👝👗 4 &#10089; O diabo veste Prada
+     &#10142; &#128127;&#128096;&#128092;&#128087; 4 &#10089; O diabo veste Prada
     <div><img src="imagens\O_diabo_veste_prada.png" width="250" height="220" ></div>
 </p>
 
 <br><p>
-     &#10142; 🥸👉🏼🍺❌ 5 &#10089; Se beber não case 
+     &#10142; &#x1F466;&#128073;&#127866;&#10060;&#128112; 5 &#10089; Se beber não case 
     <div><img src="imagens\se-beber-nao-case.png" width="250" height="220"></div>
 </p>
 <br>
