--- a/Navegador de aulas.html
+++ b/Navegador de aulas.html
@@ -27,6 +27,9 @@
 <h3><dd> <a href="Aula 11/aula 11.html" target="_self" rel="next">Aula 11</a></dd></h3>
 <h3><dd> <a href="Aula 11/aula 11 part2.html" target="_self" rel="next">Aula 11 parte 2</a></dd></h3>
 <h3><dd> <a href="Aula 12/aula 12.html" target="_self" rel="next">Aula 12</a></dd></h3>
+<h3><dd> <a href="Aula 13/aula 13.html" target="_self" rel="next">Aula 13</a></dd></h3>
+<h3><dd> <a href="Aula 14/aula 14.html" target="_self" rel="next">Aula 14</a></dd></h3>
+<h3><dd> <a href="Aula 15/aula 15.html" target="_self" rel="next">Aula 15</a></dd></h3>
 
 </body>
 </html>
