--- a/Navegador de aulas.html
+++ b/Navegador de aulas.html
@@ -6,30 +6,51 @@
     <title>Navegador de aulas</title>
 </head>
 <body>
+<style>
+
+
+.container{
+    display: flex;
+    font-size: 15px;
+    flex-direction:column;
+    align-items: center;
+}
+h3{
+    background-color: gray;
+    padding: 20px;
+}
+
+</style>
 <h1>Olá! esse aqui é um navegador criado com o objetivo de passar entre todas as aulas</h1>
 <p>Começamos na aula 3 portanto começará na aula 3</p>
 <button onclick="window.location.href='https://github.com/frferreira/2024-1-cc1n'"><h4>Github do Fabrício</h4></button>
 <button onclick="window.location.href='https://github.com/quioquiopg/Aulas-Fabr-cio-CSW-.git'"><h4>Meu Github</h4></button>
-<dl>Aulas CC1N</dl>
-<h3><dd> <a href="Aula 3/aula 3.html" target="_self" rel="next">Aula 3</a></dd></h3>
-<h3><dd> <a href="Aula 4/aula 4.html" target="_self" rel="next">Aula 4</a></dd></h3>
-<h3><dd> <a href="Aula 5/aula 5.html" target="_self" rel="next">Aula 5</a></dd></h3>
-<h3><dd> <a href="Aula 6/aula 6.html" target="_self" rel="next">Aula 6</a></dd></h3>
-<h3><dd> <a href="Aula 7/aula 7.html" target="_self" rel="next">Aula 7</a></dd></h3>
-<h3><dd> <a href="Aula 8/aula 8.html" target="_self" rel="next">Aula 8</a></dd></h3>
-<h3><dd> <a href="Aula 8/aula8pag2.html" target="_self" rel="next">Aula 8 pag2</a></dd></h3>
-<h3><dd> <a href="Aula 8/aula8pag3.html" target="_self" rel="next">Aula 8 pag3</a></dd></h3>
-<h3><dd> <a href="Aula 8/aula8pag4.html" target="_self" rel="next">Aula 8 pag4</a></dd></h3>
-<h3><dd> <a href="Aula 8/aula8pag5.html" target="_self" rel="next">Aula 8 pag5</a></dd></h3>
-<h3><dd> <a href="Aula 8/Spoiller Javascript.html" target="_self" rel="next">Aula 8 spoiler javascript</a></dd></h3>
-<h3><dd> <a href="Aula 9/aula 9.html" target="_self" rel="next">Aula 9</a></dd></h3>
-<h3><dd> <a href="Aula 10/aula 10.html" target="_self" rel="next">Aula 10</a></dd></h3>
-<h3><dd> <a href="Aula 11/aula 11.html" target="_self" rel="next">Aula 11</a></dd></h3>
-<h3><dd> <a href="Aula 11/aula 11 part2.html" target="_self" rel="next">Aula 11 parte 2</a></dd></h3>
-<h3><dd> <a href="Aula 12/aula 12.html" target="_self" rel="next">Aula 12</a></dd></h3>
-<h3><dd> <a href="Aula 13/aula 13.html" target="_self" rel="next">Aula 13</a></dd></h3>
-<h3><dd> <a href="Aula 14/aula 14.html" target="_self" rel="next">Aula 14</a></dd></h3>
-<h3><dd> <a href="Aula 15/aula 15.html" target="_self" rel="next">Aula 15</a></dd></h3>
-
+<span class="container">
+<h2>Aulas CC1N</h2>
+<h3> <a href="Aula 3/aula 3.html" target="_self" rel="next">Aula 3</a></h3>
+<h3> <a href="Aula 4/aula 4.html" target="_self" rel="next">Aula 4</a></h3>
+<h3> <a href="Aula 5/aula 5.html" target="_self" rel="next">Aula 5</a></h3>
+<h3> <a href="Aula 6/aula 6.html" target="_self" rel="next">Aula 6</a></h3>
+<h3> <a href="Aula 7/aula 7.html" target="_self" rel="next">Aula 7</a></h3>
+<h3> <a href="Aula 8/aula 8.html" target="_self" rel="next">Aula 8</a></h3>
+<h3> <a href="Aula 8/aula8pag2.html" target="_self" rel="next">Aula 8 pag2</a></h3>
+<h3> <a href="Aula 8/aula8pag3.html" target="_self" rel="next">Aula 8 pag3</a></h3>
+<h3> <a href="Aula 8/aula8pag4.html" target="_self" rel="next">Aula 8 pag4</a></h3>
+<h3> <a href="Aula 8/aula8pag5.html" target="_self" rel="next">Aula 8 pag5</a></h3>
+<h3> <a href="Aula 8/Spoiller Javascript.html" target="_self" rel="next">Aula 8 spoiler javascript</a></dd></h3>
+<h3> <a href="Aula 9/aula 9.html" target="_self" rel="next">Aula 9</a></h3>
+<h3> <a href="Aula 10/aula 10.html" target="_self" rel="next">Aula 10</a></h3>
+<h3> <a href="Aula 11/aula 11.html" target="_self" rel="next">Aula 11</a></h3>
+<h3> <a href="Aula 11/aula 11 part2.html" target="_self" rel="next">Aula 11 parte 2</a></h3>
+<h3> <a href="Aula 12/aula 12.html" target="_self" rel="next">Aula 12</a></h3>
+<h3> <a href="Aula 13/aula 13.html" target="_self" rel="next">Aula 13</a></h3>
+<h3> <a href="Aula 14/Aula 14.html" target="_self" rel="next">Aula 14</a></h3>
+<h3> <a href="Aula 15/Aula 15.html" target="_self" rel="next">Aula 15</a></h3>
+<h3> <a href="Aula 16/Aula 16.html" target="_self" rel="next">Aula 16</a></h3>
+<h3> <a href="Aula 17/Aula 17.html" target="_self" rel="next">Aula 17</a></h3>
+<h3> <a href="Aula 17/Aula 17pt2.html" target="_self" rel="next">Aula 17 parte 2</a></h3>
+<h3> <a href="Aula 18/contato.html" target="_self" rel="next">Aula 18</a></h3>
+<h3> <a href="Aula 19/Aula 19.html" target="_self" rel="next">Aula 19</a></h3>
+</span>
 </body>
 </html>
