--- a/Aula 18/contato.html
+++ b/Aula 18/contato.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +8,43 @@
 </head>
 <body>
     <header>
-        <div>
-            <img src="img/logo.png" alt="logo da paraty">
-            <nav>
-                <a href="#Sobre">
-                <a href="#pontos">
-                <a href=""></a>
-            </nav>
-        </div>
+        <section id="contato">
+            <div>
+                <img src="img/logo.png" alt="logo da paraty">
+                <nav>
+                    <a href="#Sobre">Sobre</a>
+                    <a href="#pontos">Pontos Turísticos</a>
+                    <a href="#galeria">Galeria</a>
+                    <a href="#contato">Contato</a>
+                </nav>
+            </div>
+
+            <h1>Contato</h1>
+                <div>
+                    <span>Login</span>
+                    <input id="usuario" type="email">
+                    <span>Senha</span>
+                    <input id="senha" type="password">
+                    <button validar()>Enviar</button>
+                    <button>Cancelar</button>
+                </div>
+        </section>
     </header>
 </body>
+<script>
+    const adm = "adm@uvv.br"
+    const psw = "admin123"
+
+    funcion validar() {
+        let usuario = document.getElementById("usuario").value
+        let senha = document.getElementById("senha").value
+        if (usuario == adm && senha == psw) {
+            window.alert("Usuário logado!")
+        }
+        else
+        {
+            window.alert("Usuário inválido. Tente novamente!")
+        }
+    }
+</script>
 </html>
