--- a/Aula 19/Aula 19.html
+++ b/Aula 19/Aula 19.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +19,7 @@
     <input id="nomeUsuario" type="text" size="60">
     <button onclick="validarUsuario()">Validar</button>
 </div>
+
     <script>
 
         function validarUsuario() {
